<resources>
    <string name="app_name">demo2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gpt_3an">Giải PT bậc nhất 3 ẩn</string>
    <string name="gpt_bac2">Giải PT bậc 2</string>
    <string name="gpt_bac3">Giải PT bậc 3</string>
    <string name="giaipt">Giải phương trình</string>
    <string name="kq">Kết quả</string>
    <string name="them_he_so">Thêm hệ số</string>
    <string name="hsa">Nhập hệ số a</string>
    <string name="hsb">Nhập hệ số b</string>
    <string name="hsc">Nhập hệ số c</string>
    <string name="hsd">Nhập hệ số d</string>
    <string name="dong_y">Đồng ý</string>
</resources>